--- a/site/style1.css
+++ b/site/style1.css
@@ -2,12 +2,17 @@
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
- }
+.row{
+	width:100%;
+}
 span{
 	font-size: 20px;
         width: 150px;
         text-align: center;
         position: absolute;
+	padding:5px;
+	border-bottom: 1px solid black;
+        border-left: 1px solid black;
         top: 0;
         right:0;
 
@@ -19,7 +24,7 @@ p{
 	background-color: slategrey;
 	border: 1px solid black;
         margin: 10px;
-        height: 300px;
+        height: 200px;
         position: relative;
 	
 
